# libcccrt

./: .gitignore  .gitmodules  CCC.hpp  CMakeLists.txt  CMakeLists.txt.in  ETC.hpp  LICENSE  LZ.hpp  README.md  RPC.hpp  cmake_install.cmake  fractal.hpp  main.cpp  setup.py  shannonEntropy.hpp
armadillo/: ArmadilloConfig.cmake  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  docs.html  install_manifest.txt
armadillo/InstallFiles/: ArmadilloConfigVersion.cmake
armadillo/examples/: Makefile
armadillo/src/: wrapper1.cpp  wrapper2.cpp
armadillo/tmp/include/armadillo_bits/: config.hpp
armadillo/tmp/misc/: armadillo.pc
benchmarks/: CMakeLists.txt  main.cpp
plugins/pd/: libcccrt-pd.cpp
plugins/supercollider/: CMakeLists.txt  README.md  regenerate
plugins/supercollider/binaries/: readme.md
plugins/supercollider/plugins/CccRPC/: CccRPC.cpp  CccRPC.hpp  CccRPC.sc  CccRPC.schelp
plugins/supercollider/plugins/common/: RingBuf.hpp
plugins/supercollider/test/: cccplugins-test.scd
python/: CCCpy.cpp  PY INSTALL  examples.py  setup.py
